overflow-y setting to auto for body. that ensures, that in admin pages we can scroll down again

--- a/app/app.css
+++ b/app/app.css
@@ -1,7 +1,7 @@
 /* app css stylesheet */
 
 body {
-	overflow-y: hidden !important;
+	overflow-y: auto !important;
 }
 
 /* toastr library override of transparency */
